# hw07-Group14

./: .buildinfo  .gitignore  LICENSE  Makefile  README.html  README.md  Single-cell-analysis.html  Single-cell-analysis.ipynb  _config.yml  _toc.yml  conf.py  contribution_statement.html  environment.yml  genes.yml  genindex.html  hw07-description.html  hw07-description.md  introduction.html  introduction.md  main.html  main.ipynb  objects.inv  references.bib  search.html  searchindex.js  setup.cfg  single-cell-analysis.html  single-cell-analysis.ipynb
_build/html/: .buildinfo  README.html  Single-cell-analysis.html  genindex.html  hw07-description.html  main.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  Single-cell-analysis.doctree  environment.pickle  hw07-description.doctree  main.doctree
_build/html/_sources/: README.md  Single-cell-analysis.ipynb  main.ipynb
_build/jupyter_execute/: Single-cell-analysis.ipynb  Single-cell-analysis.py  main.ipynb
_sources/: README.md  contribution_statement.md
genetools/: __init__.py  dataloader.py  ml.py
genetools/tests/: conftest.py  test_dataloader.py  test_models.py
models/: autoencoder_best.hdf5  encoder_best.hdf5  nn_larger_best.hdf5  nn_small_best.hdf5
tables/: cv_results.csv  test_performance.csv
