[metadata]
name             = genetools
version          = attr: genetools.__version__
author           = Catalina Villouta
author_email     = catalina.villouta@berkeley.edu
description      = A library that provides tools for fitting predictive gene based machine learning models
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, genes
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 3.9,
install_requires =
	tqdm
	

[options.packages.find]
exclude =
    examples*
    docs*
